# commonlibsse-ng-template

./: .gitmodules  CMakeLists.txt
cmake/: CPM.cmake
